src/app/layout/navbar/navbar.component.scss
@import '../../../styles/variables';

nav.navbar {
  background-color: $primary;
  .navbar-brand {
    text-transform: uppercase;
    font-weight: 700;
    color: $highlight;
    letter-spacing: 3px;
    font-family: 'Monserrat', sans-serif;
    span {
      font-style: italic;
      font-weight: bold;
    }
  }
  #navbarNav {
    ul li a {
      color: $highlight;
      font-weight: 800;
    }
  }
  button.navbar-toggler {
    &:focus,:active {
      outline-color: rgba(0, 0, 0, 0.1) !important;
    }
  }
}

